Fixed layout issues in programs

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1034,7 +1034,6 @@
       margin: 0 auto 20px;
       line-height: 1.7em;
       font-size: 18px;
-      height: 85px;
     }
     .mentor {
       text-align: center;
